--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "eslint-config-next": "15.1.6",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
-    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.3.3"
   }
 }
