add contact us api

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "eslint-config-next": "15.1.6",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.5",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
